# Qwen3-invoice-extractor

./: .gitignore  README.md  evaluation_results.json  main.py  pyproject.toml
docs/: project_description.md
scripts/: __init__.py  prepare_data.py
src/: __init__.py
src/deployment/: __init__.py  config.py  sagemaker_deployer.py
src/inference/: __init__.py  client.py  schema.py
src/ingestion/: __init__.py  pdf_parser.py
src/training/: __init__.py  config.py  data_preparation.py  dataset_loader.py  prompt_template.py  trainer.py
src/training/configs/: __init__.py  dataset_config.py  training_config.py
src/training/phases/: __init__.py  phase1_data_preparation.py  phase2_model_training.py  phase3_export.py
src/training/utils/: __init__.py  data_validator.py  hf_loader.py  prompt_formatter.py
